# my-actuator-custom

./: .gitignore  README.md  pyproject.toml
app/: main.py
scripts/: KeyboardJointMovement.py  PlanarControlv1.py  PositionTuningPlots.py  break_testing.py  currentTuning.py  currenttuningplots.py  jog_a2_a3.py  motorInfoGraphs.py  motor_data.csv  positionTuning.py  rateTuning.py  rateTunningPlots.py  readmotorStatus.py  robot_data.csv  robot_data_plotting.py  robot_gain_tuning.py  run_both.py  zeroing.py
scripts/data/: a2_target_angles.csv  a3_target_angles.csv  connor_targets.csv  current_a2_events.csv  current_a3_events.csv  position_error_events.csv  raw_cg.csv  shaft_angles_a2_events.csv  shaft_angles_a3_events.csv  shaft_speeds_a2_events.csv  shaft_speeds_a3_events.csv  tip_x_position_events.csv  tip_x_target_events.csv  x_target_differents.csv
src/my_actuator_custom/: Receiver_code.py  hextodec.py  numpytest.py  shutdown_motors.py
src/myactuator_custom/: InitializeMotors.py  __init__.py  get_error_codes.py  manual_can.py  positions.csv  signal_passing_test.py
utils/: README.md
